# sonic_spectra

./: .gitignore  Cargo.toml  README.md
resources/: config.toml  style.css
resources/ui/: main.slint  main.ui
src/: audio.rs  fft_utils.rs  frequency_holographic_glow_visualizer.rs  frequency_range_visualizer.rs  grid.rs  lib.rs  main.rs  settings.rs  visualizer.rs
