[package]
name = "sonic_spectra"
version = "0.2.0-beta"
edition = "2021"

[dependencies]
cairo-rs = "0.18.5"
cpal = "0.15.3"
glib = "0.18.5"
gtk4 = "0.9.2"
rustfft = "6.2.0"
async-std = "1.13.0"
serde = { version = "1.0.210", features = ["derive"]}
toml = "0.8.19"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
futures = "0.3.30"
gio = "0.20.4"
